--- a/front-react/src/custom.css
+++ b/front-react/src/custom.css
@@ -1,3 +1,11 @@
+@layer base {
+
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
+}
+
 /* Sidebar-specific scrollbar styling */
 [data-sidebar="content"] {
   /* Firefox */
